Actualizando para segunda preentrega 2.1.2 post y get

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="../../public/css/style.css">
     <title>Coderhouse Nahuel Lopez Back 1</title>
 </head>
 <body>
-    {{{body}}}
+    <header></header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sesión</a></li>
+                <li><a href="#">Buscar</a></li>
+            </ul>
+        </nav>
+    </header>
+     <main>
+        {{{body}}}
+     </main>
+
+
+    <footer>
+        <p>Git: https://github.com/NahuelMGithub/Back01-Coder-Entregas-LopezNahuel</p>
+        <p>&copy; 2024 Derechos Reservados</p>
+    </footer>  
+      
 </body>
 </html>
