Actualizando para segunda preentrega 2.1.3 con metodo delete por id correcto

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,6 +1,6 @@
 {{!-- Crear una vista “home.handlebars” la cual contenga una lista de todos los productos agregados hasta el momento  --}}
 <h1>Listado de productos</h1>
-<h2>Hola <samp id="username"></samp>  queremos escuchar tu opinion</h2>
+<h3>Hola <samp id="username"></samp>  Estos son todos los productos</h3>
 
 <div class="productsContenedor">
     <p id="productsLogs"></p>
