--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -17,6 +17,7 @@ header {
     background-color: #333;
     color: #fff;
     padding: 1rem 0;
+    height: 100px;
 }
 
 nav ul {
@@ -32,8 +33,8 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 1.2rem;
-    transition: color 0.3s ease;
+    font-size: 1.4rem;
+    
 }
 
 nav ul li a:hover {
