--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="css/{{style}}">
     <title>Coderhouse Nahuel Lopez Back 1</title>
 </head>
 <body>
-    <header></header>
+    <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <a href="{{"../home.handlebars"}}">Click aquí</a>
+                <li><a href="../home.handlebars">Home</a></li>
                 <li><a href="#">Sesión</a></li>
                 <li><a href="#">Buscar</a></li>
             </ul>
