--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -5,8 +5,11 @@
 <div>
     <input id="chatbox">
 </div>
-<div>
+<div> <h3>Mensajes</h3>
     <p id="messageLogs"></p>
+</div>
+<div> <h3>usuarios conectados</h3>
+    <p id="userList"></p>
 </div>
 
 <div>
