--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/{{style}}">
+    <link rel="stylesheet" href="css/style.css">
     <title>Coderhouse Nahuel Lopez Back 1</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <a href="{{"../home.handlebars"}}">Click aquí</a>
-                <li><a href="../home.handlebars">Home</a></li>
+                <li><a href="./realTimeProcuts.handlebars">Home</a></li> 
                 <li><a href="#">Sesión</a></li>
-                <li><a href="#">Buscar</a></li>
+                <li><a href="https://chatgpt.com/">Ayuda</a></li>
             </ul>
         </nav>
     </header>
