Actualizando para segunda preentrega 2.20 con chat para preentrega

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -2,6 +2,8 @@
 
 <h1>Bienvenido al chat de productos</h1>
 <h2>Hola <samp id="username"></samp>  queremos escuchar tu opinion</h2>
+<p id="typing"></p>
+
 <div>
     <input id="chatbox">
 </div>
