--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,13 +2,39 @@
 <h1>Listado de productos</h1>
 <h3>Hola <samp id="username"></samp>  Estos son todos los productos</h3>
 
-<div class="productsContenedor">
-    <p id="productsLogs"></p>
+<div class="productsContenedorDeHome">
+ <div class="row">
+            {{#each products}} <!-- Iteramos sobre el array de productos -->
+            <div class="col-md-4"> <!-- Cada card ocupa 1/3 del ancho de la pantalla en pantallas medianas -->
+                <div class="card mb-4 shadow-sm">
+                    <!-- Imagen del producto, si está disponible -->
+                    {{#if this.thumbnails}}
+                    <img src="{{this.thumbnails}}" class="card-img-top" alt="Imagen de {{this.title}}">
+                    {{else}}
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Imagen no disponible"> <!-- Imagen de reemplazo si no hay thumbnail -->
+                    {{/if}}
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.title}}</h5> <!-- Título del producto -->
+                        <p class="card-text">{{this.description}}</p> <!-- Descripción del producto -->
+                        <p class="card-text">Precio: ${{this.price}}</p> <!-- Precio del producto -->
+                        <p class="card-text">Stock: {{this.stock}}</p> <!-- Stock disponible -->
+                        <p class="card-text">Categoría: {{this.category}}</p> <!-- Categoría del producto -->
+                        <p class="card-text">Estado: {{#if this.status}}Disponible{{else}}No disponible{{/if}}</p> <!-- Estado del producto -->
+                        <div class="d-flex justify-content-between align-items-center">
+                            <small class="text-muted">Código: {{this.code}}</small> <!-- Código del producto -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {{/each}}
+        </div>
 </div>
+
+
 
 <div>
     <button id="opinar">Dar mi opinion</button>
 </div>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> {{!-- sweetalert2 --}}
 <script src="/socket.io/socket.io.js"></script> {{!-- esto es del lado del cliente --}}
-<script src="/js/index.js"></script>
+<script src="/js/home.js"></script>
