--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Coderhouse Nahuel Lopez Back 1</title>
 </head>
@@ -10,8 +11,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./realTimeProcuts.handlebars">Home</a></li> 
-                <li><a href="#">Sesión</a></li>
+                <li><a href="http://localhost:8080">Home</a></li> 
+                <li><a href="http://localhost:8080/realTimeProducts">realTimeProducts</a></li>
                 <li><a href="https://chatgpt.com/">Ayuda</a></li>
             </ul>
         </nav>
