--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -35,4 +35,4 @@ POST. ¿Cómo utilizarás un emit dentro del POST?
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> {{!-- sweetalert2 --}}
 <script src="/socket.io/socket.io.js"></script> {{!-- esto es del lado del cliente --}}
-<script src="/js/productosEnTiempoReal.js"></script>
+<script src="/js/realTimeProducts.js"></script>
