--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -78,6 +78,22 @@ footer p {
     padding: 10px;
 }
 
+#productsContenedorDeTiempoReal{
+    display: flex;
+    flex-direction: column;
+    border: 4px solid black;
+    border-radius: 20px;
+     margin-left: 5%;
+    width: 90%;
+    min-height: 50%;
+    height: auto;
+    background-color: rgb(14, 170, 129);  
+    padding: 10px;
+}
+
+
+
+
 .card {
     max-width: 300px; 
     margin: 0 auto; 
