--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -11,8 +11,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="http://localhost:8080">Home</a></li> 
-                <li><a href="http://localhost:8080/realTimeProducts">realTimeProducts</a></li>
+                <li><a href="http://localhost:3037">Home</a></li> 
+                <li><a href="http://localhost:3037/newProduct">Nuevo Juego</a></li>
+                <li><a href="http://localhost:3037/cart">Mi carrito</a></li>
                 <li><a href="https://chatgpt.com/">Ayuda</a></li>
             </ul>
         </nav>
@@ -20,7 +21,6 @@
      <main>
         {{{body}}}
      </main>
-
 
     <footer>
         <p>Git: https://github.com/NahuelMGithub/Back01-Coder-Entregas-LopezNahuel</p>
