--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,5 +1,10 @@
 {{!-- Esta es mi motor de plantilla --}}
 
+
+este podria ser para los filtros.
+O eso puede estar en products. directamente
+
+
 <h1>Bienvenido al chat de productos</h1>
 <h2>Hola <samp id="username"></samp>  queremos escuchar tu opinion</h2>
 <p id="typing"></p>
