--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -103,3 +103,33 @@ footer p {
     max-height: 200px; 
     object-fit: cover; 
 }
+
+
+.form-container {
+    border: 3px solid #0eaa81;
+    border-radius: 15px;
+    background-color: #f8f9fa;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 5% auto;
+  }
+  
+  h2 {
+    color: #0eaa81;
+  }
+  
+  input.form-control {
+    border-radius: 10px;
+    border: 1px solid #ced4da;
+  }
+  
+  button.btn-primary {
+    background-color: #0eaa81;
+    border: none;
+    transition: background-color 0.3s ease;
+  }
+  
+  button.btn-primary:hover {
+    background-color: #0b8b6a;
+  }
+  
