--- a/src/views/error.handlebars
+++ b/src/views/error.handlebars
@@ -1,5 +1,10 @@
-<h1>Error 404</h1>
-
-<div>
-    <p>{{error}}</p>
+<div class="container text-center">
+  <div class="row justify-content-center align-items-center" style="height: 100vh;">
+    <div class="col-md-6">
+      <h1 class="display-1 text-danger">Error 404</h1>
+      <p class="lead">Oops! La pagina no fue encontrada.</p>
+      <p class="text-muted">{{error}}</p>
+      <a href="/" class="btn btn-primary mt-4">Volver a Home</a>
+    </div>
+  </div>
 </div>
