--- a/src/views/allProducts.handlebars
+++ b/src/views/allProducts.handlebars
@@ -1,12 +1,32 @@
-<h1>Lista de todos los productos</h1>
+{{#if isValid}}
 
+<h1>Lista de todos los productos</h1>
+<div class="contenedor-juegosPorPagina">
 <ul>
     {{#each products}}
     <li>
         <h5 class="card-title">{{this.title}}</h5>
         <p class="card-text">Precio: ${{this.price}}</p>
         <a href="products/{{this._id}}"> Ir A Detalles </a>
-
     </li>
     {{/each}}
 </ul>
+</div>
+
+
+
+{{#if hasPrevPage}}
+ <div class="contenedor-navegacion"></div>
+<a href={{this.prevLink}}>Anterior</a>
+{{/if}}
+&nbsp;
+{{this.page}}
+&nbsp;
+{{#if hasNextPage}}
+<a href={{this.nextLink}}>Siguiente</a>
+ <br>
+ </div>
+ {{/if}}
+{{else}}
+<h1>No hay productos para mostrar</h1>
+{{/if}}
