--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,13 +1,13 @@
 <div class="cart-container container mt-4">
-  <h2 class="text-center mb-4">Shopping Cart</h2>
+  <h2 class="text-center mb-4">Carrito de compras</h2>
   
   {{#if products.length}}
     <ul class="list-group mb-3">
       {{#each products}}
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <div>
-            <h5 class="mb-1">{{name}}</h5>
-            <p class="mb-1">Price: ${{price}}</p>
+            <h5 class="mb-1">{{this.juego.name}}</h5>
+            <p class="mb-1">Price: ${{this.juego.price}}</p>
           </div>
         </li>
       {{/each}}
