--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -6,7 +6,7 @@
       {{#each products}}
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <div>
-            <h5 class="mb-1">{{this.juego.name}}</h5>
+            <h5 class="mb-1"> Nombre {{this.juego.title}}</h5>
             <p class="mb-1">Price: ${{this.juego.price}}</p>
           </div>
         </li>
