--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -4,16 +4,24 @@
   {{#if products.length}}
     <ul class="list-group mb-3">
       {{#each products}}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <div>
-            <h5 class="mb-1"> Nombre {{this.juego.title}}</h5>
-            <p class="mb-1">Price: ${{this.juego.price}}</p>
-          </div>
+        <li class="list-group-item">
+          <h2>{{juego.title}}</h2>
+          <p>{{juego.description}}</p>
+          <p>Precio: {{juego.price}} USD</p>
+          <p>Categoría: {{juego.category}}</p>
+          <img src="{{juego.thumbnails}}" alt="{{juego.title}}" class="img-fluid">
         </li>
       {{/each}}
     </ul>
     
-    <button class="btn btn-danger btn-block" id="clearCartButton">Eliminar Carrito</button>
+    <!-- Formulario para eliminar todos los productos del carrito -->
+<!-- Formulario para eliminar todos los productos del carrito -->
+<form action="/cart/671306187129263c6caab6c7" method="POST" enctype="application/x-www-form-urlencoded">
+  <input type="hidden" name="_method" value="DELETE">
+  <button class="btn btn-danger btn-block" type="submit">Eliminar Carrito</button>
+</form>
+
+
   {{else}}
     <p class="alert alert-warning text-center">No hay productos en el carrito</p>
   {{/if}}
