--- a/src/views/newProduct.handlebars
+++ b/src/views/newProduct.handlebars
@@ -36,16 +36,27 @@
       </div>
 
       <div class="mb-3">
-        <label for="category" class="form-label">Category:</label>
-        <input type="text" class="form-control" id="category" name="category" required>
+        <label for="category" class="form-label">Categoría:</label>
+        <select id="category" class="form-control" name="category" required>
+          <option value="" disabled selected>Seleccionar categoría</option>
+          <option value="Abstracto">Abstracto</option>
+          <option value="Clasico">Clásico</option>
+          <option value="Cooperativo">Cooperativo</option>
+          <option value="EuroGame">EuroGame</option>
+          <option value="Estrategia">Estrategia</option>
+          <option value="Misterio">Misterio</option>
+          <option value="Solitario">Solitario</option>
+          <option value="PartyGame">PartyGame</option>
+        </select>
       </div>
 
-{{!-- 
+      {{!-- 
       <div class="mb-3">
         <label for="file" class="form-label">Imagen del Juego: (opcional):</label>
           <input type="file" id="thumbnails" name="thumbnails">
       </div>
- --}}
+      --}}
+
       <button type="submit" class="btn btn-primary w-100">Create Juego</button>
     </form>
   </div>
