Act 2.0.1 todos los puntos de entrega final. Solucionados todos de product. faltan solo 2 de Cart

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background: linear-gradient(to right, #74ebd5, #acb6e5); /* Gradiente de colores */
 }
 
 
