Act 3.2.2 entrega final con txt para docente

--- a/src/views/newProduct.handlebars
+++ b/src/views/newProduct.handlebars
@@ -51,10 +51,10 @@
       </div>
 
     
-      <div class="mb-3">
+{{!--       <div class="mb-3">
         <label for="file" class="form-label">Imagen del Juego: (opcional):</label>
           <input type="file" id="thumbnails" name="thumbnails">
-      </div>
+      </div> --}}
       
 
       <button type="submit" class="btn btn-primary w-100">Create Juego</button>
